Update ProdId constant and NodaTime package version
Updated the `ProdId` constant in `LibraryMetadata` class within `Constants.cs` to reflect a new GitHub organization. Changed the value from `"-//github.com/rianjs/ical.net//NONSGML ical.net 4.0//EN"` to `"-//github.com/ical-org/ical.net//NONSGML ical.net 4.0//EN"`.

Modified the `NodaTime` package reference in `Ical.Net.csproj` to use a wildcard for the patch version, changing from `"3.1.11"` to `"3.1.*"` to allow for automatic updates to any 3.1.x version.

--- a/Ical.Net/Ical.Net.csproj
+++ b/Ical.Net/Ical.Net.csproj
@@ -5,6 +5,6 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="NodaTime" Version="3.1.11" />
+    <PackageReference Include="NodaTime" Version="3.1.*" />
   </ItemGroup>
 </Project>
