--- a/Ical.Net/Ical.Net.csproj
+++ b/Ical.Net/Ical.Net.csproj
@@ -1,10 +1,14 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk" ToolsVersion="15.0">
-  <PropertyGroup>
-    <TargetFrameworks>net8.0;net6.0;netstandard2.1;netstandard2.0</TargetFrameworks>
-    <NuspecProperties>version=$(Version)</NuspecProperties>
-  </PropertyGroup>
+    <PropertyGroup>
+        <TargetFrameworks>net8.0;net6.0;netstandard2.1;netstandard2.0</TargetFrameworks>
+        <NuspecProperties>version=$(Version)</NuspecProperties>
+    </PropertyGroup>
 
-  <ItemGroup>
-    <PackageReference Include="NodaTime" Version="3.1.*" />
-  </ItemGroup>
+    <ItemGroup>
+        <PackageReference Include="NodaTime" Version="3.1.*" />
+    </ItemGroup>
+
+    <ItemGroup>
+        <InternalsVisibleTo Include="Ical.Net.Tests" />
+    </ItemGroup>
 </Project>
