--- a/Ical.Net.Benchmarks/Ical.Net.Benchmarks.csproj
+++ b/Ical.Net.Benchmarks/Ical.Net.Benchmarks.csproj
@@ -3,6 +3,7 @@
   <PropertyGroup>
     <TargetFrameworks>net8.0;net6.0;netcoreapp3.1;net48</TargetFrameworks>
     <OutputType>Exe</OutputType>
+    <LangVersion>latest</LangVersion>
   </PropertyGroup>
 
   <ItemGroup>
