--- a/Ical.Net.Tests/Ical.Net.Tests.csproj
+++ b/Ical.Net.Tests/Ical.Net.Tests.csproj
@@ -21,6 +21,9 @@
         <EmbeddedResource Include="Calendars\**\*.ics" />
     </ItemGroup>
     <ItemGroup>
+      <EmbeddedResource Include="contrib\libical\icalrecur_test.out" />
+    </ItemGroup>
+    <ItemGroup>
         <Service Include="{82a7f48d-3b50-4b1e-b82e-3ada8210c358}" />
     </ItemGroup>
 </Project>
