Test: Run recurrence test cases from the libical project and introduce generic file-based test cases. (#617)
* Copy icalrecur_test.out from https://github.com/libical/libical/blob/cfd401b9d043214395888de1d9daf52263e3245b/src/test/icalrecur_test.out

* Test: Introduce tests based on the RRULE test cases from the libical project. 14/70 failing.

* icalrecur_test: Deactivate failing tests for now.

* Test: Introduce file-based recurrence test cases with an example test.

--- a/Ical.Net.Tests/Ical.Net.Tests.csproj
+++ b/Ical.Net.Tests/Ical.Net.Tests.csproj
@@ -18,7 +18,10 @@
         <ProjectReference Include="..\Ical.Net\Ical.Net.csproj" />
     </ItemGroup>
     <ItemGroup>
-        <EmbeddedResource Include="Calendars\**\*.ics" />
+        <EmbeddedResource Include="Calendars\**\*" />
+    </ItemGroup>
+    <ItemGroup>
+      <EmbeddedResource Include="contrib\libical\icalrecur_test.out" />
     </ItemGroup>
     <ItemGroup>
         <Service Include="{82a7f48d-3b50-4b1e-b82e-3ada8210c358}" />
