Use `ubuntu-22.04` for GitHub Actions
`ubuntu-latest` is now `ubuntu-24.04`, which does not include `mono`, so that building for .NETFramework,Version=v4.8 fails

--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -13,7 +13,8 @@ on:
 
 jobs:
   coverage:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-22.04
+    # ubuntu-latest = ubuntu-24.04 does not include mono (2025-08-01)
 
     steps:
     - name: Checkout repository
