--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -21,6 +21,8 @@ jobs:
       uses: actions/checkout@v4
       with:
         fetch-depth: 0  # Fetch all history for all tags and branches
+    - name: Set Git config for line endings
+      run: git config --global core.autocrlf true
     - name: Setup .NET
       uses: actions/setup-dotnet@v4
       with:
