--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -44,9 +44,9 @@ jobs:
         name: coverage-report
         path: ./Ical.Net.Tests/coverage.*.xml  # store all coverage reports
     - name: Upload coverage to Codecov  
-      uses: codecov/codecov-action@v4  
+      uses: codecov/codecov-action@v5  
       with:  
         # files: automatically finds all in ./Ical.Net.Tests/
         name: coverage
-        token: ${{ secrets.CODECOV_TOKEN }}
+        # ical-org does not require an upload token for its public repositories
         fail_ci_if_error: false
