Migrate Ical.Net.Benchmarks to NRT enabled

--- a/Ical.Net.Benchmarks/Ical.Net.Benchmarks.csproj
+++ b/Ical.Net.Benchmarks/Ical.Net.Benchmarks.csproj
@@ -2,7 +2,7 @@
     <PropertyGroup>
         <TargetFrameworks>net8.0</TargetFrameworks>
         <OutputType>Exe</OutputType>
-        <nullable>disable</nullable>
+        <nullable>enable</nullable>
         <LangVersion>latest</LangVersion>
     </PropertyGroup>
     <ItemGroup>
