Fix for https://github.com/ical-org/ical.net/issues/819#issue-3156911979
Correct fallback solution when 'FileVersionInfo.GetVersionInfo' is not available on a specific platform. Synchronize versions.

--- a/Ical.Net/Ical.Net.csproj
+++ b/Ical.Net/Ical.Net.csproj
@@ -5,6 +5,7 @@
         <AssemblyOriginatorKeyFile>..\IcalNetStrongnameKey.snk</AssemblyOriginatorKeyFile>
         <nullable>enable</nullable>
         <LangVersion>latest</LangVersion>
+        <FileVersion>2.0</FileVersion>
     </PropertyGroup>
     <ItemGroup>
         <PackageReference Include="NodaTime" Version="3.2.2" />
