Trigger Code Coverage when pushed to `pr/*` or `wip/*` branches
Exclude changes to markdown files

--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -7,9 +7,15 @@ on:
   pull_request:
     branches:
       - main
+    paths-ignore:
+      - '**/*.md'
   push:
     branches:
       - main
+      - 'pr/**/*'
+      - 'wip/**/*'
+    paths-ignore:
+      - '**/*.md'
 
 jobs:
   coverage:
