--- a/codecov.yml
+++ b/codecov.yml
@@ -1,12 +1,12 @@
 ﻿coverage:
-  precision: 0      # no decimals
+  precision: 1      # one decimal
   round: nearest    # round up/down
   range: "80...100"
 
   status:
     project:        # show status on project level
       default:
-        target: 80  # Set the target coverage percentage
+        target: 67  # Set the target coverage percentage
     patch:          # show status on patch level
       default:
         target: 80  # minimum coverage for successful commit 
