--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -52,7 +52,7 @@ jobs:
         name: coverage-report
         path: ./Ical.Net.Tests/coverage.*.xml  # store all coverage reports
     - name: Upload coverage to Codecov  
-      uses: codecov/codecov-action@v5  
+      uses: codecov/codecov-action@5a1091511ad55cbe89839c7260b706298ca349f7
       with:  
         # files: automatically finds all in ./Ical.Net.Tests/
         name: coverage
