chore: Update CI/CD workflow for branch `version/6.0`

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -5,11 +5,13 @@ on:
   pull_request:
     branches:
       - main
+      - 'version/6.0'
     paths-ignore:
       - '**/*.md'
   push:
     branches:
       - main
+      - 'version/6.0'
       - 'pr/**/*'
       - 'wip/**/*'
     paths-ignore:
